--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#84FFC9",
+  "theme_color": "#2A3720",
   "background_color": "#F5F5F5"
 }
